// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Live CommentScreen should match snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#303030",
      "height": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "height": "100%",
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#1a1a1a",
            "borderRadius": 8,
            "padding": 10,
            "shadowColor": "#ebebeb",
            "shadowRadius": 8,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "fontWeight": "900",
            }
          }
        >
          team one
        </Text>
        <View
          style={
            Object {
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#ffd600",
                      "fontSize": 30.821917808219176,
                      "fontWeight": "900",
                    }
                  }
                >
                   pulls
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(255, 214, 0, 0.29)",
                    "borderRadius": 4,
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "elevation": 0,
                    "flexDirection": "column",
                    "margin": 2,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": true,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "borderRadius": 4,
                        },
                        Object {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        Object {
                          "paddingRight": 4,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "System",
                            "fontWeight": "400",
                          },
                          Object {
                            "textAlign": "left",
                          },
                          Array [
                            Object {
                              "lineHeight": 24,
                              "marginVertical": 4,
                              "minHeight": 24,
                              "textAlignVertical": "center",
                            },
                            Object {
                              "color": "rgba(255, 214, 0, 0.87)",
                              "fontFamily": "System",
                              "fontWeight": "400",
                              "marginLeft": 8,
                              "marginRight": 8,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      ib
                    </Text>
                  </View>
                </View>
              </View>
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                hitSlop={
                  Object {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "margin": 6,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 11.25,
                        "height": 22.5,
                        "width": 22.5,
                      },
                      undefined,
                      undefined,
                    ],
                  ]
                }
              >
                <View>
                  <Text
                    accessibilityElementsHidden={true}
                    allowFontScaling={false}
                    importantForAccessibility="no-hide-descendants"
                    pointerEvents="none"
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#ffd600",
                          "fontSize": 15,
                        },
                        Array [
                          Object {
                            "lineHeight": 15,
                            "transform": Array [
                              Object {
                                "scaleX": 1,
                              },
                            ],
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                        ],
                        Object {
                          "fontFamily": "Material Design Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    󰆉
                  </Text>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#ffd600",
                    "fontSize": 30.821917808219176,
                  }
                }
              >
                (
                1
                )
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#1a1a1a",
            "flex": 1,
            "marginTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1a1a1a",
              "borderBottomColor": "#ffd600",
              "borderBottomWidth": 1,
              "display": "flex",
              "flexDirection": "row",
              "padding": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <TextInput
              multiline={true}
              onChangeText={[Function]}
              placeholder="Add a comment..."
              placeholderTextColor="#ababab"
              style={
                Object {
                  "backgroundColor": "#1a1a1a",
                  "color": "#ffd600",
                }
              }
              value=""
            />
          </View>
          <View>
            <Text
              style={
                Object {
                  "color": "#ffd600",
                }
              }
            >
              0
               / 
              160
            </Text>
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#ababab",
                  "borderColor": "transparent",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "elevation": 0,
                  "minWidth": "auto",
                }
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 4,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Array [
                          Object {
                            "letterSpacing": 1,
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          Object {
                            "marginHorizontal": 8,
                          },
                          Object {
                            "textTransform": "uppercase",
                          },
                          Object {
                            "color": "rgba(0, 0, 0, 0.32)",
                            "fontFamily": "System",
                            "fontWeight": "500",
                          },
                          Object {
                            "fontFamily": "System",
                            "fontWeight": "500",
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    send
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <RCTScrollView
          ItemSeparatorComponent={[Function]}
          data={
            Array [
              Object {
                "comment": "Test comment",
                "commentNumber": 1,
                "user": Object {
                  "_id": "user1",
                  "firstName": "First1",
                  "lastName": "Last1",
                  "username": "firstlast",
                },
              },
            ]
          }
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          viewabilityConfigCallbackPairs={Array []}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#1a1a1a",
                    "display": "flex",
                    "flexDirection": "row",
                    "padding": 20,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#ababab",
                        "fontSize": 30.821917808219176,
                      }
                    }
                  >
                    First1
                     
                    Last1
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                      }
                    }
                  >
                    Test comment
                  </Text>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 6,
                      "left": 6,
                      "right": 6,
                      "top": 6,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "margin": 6,
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 18,
                          "height": 36,
                          "width": 36,
                        },
                        undefined,
                        undefined,
                      ],
                    ]
                  }
                >
                  <View>
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#ff0000",
                            "fontSize": 24,
                          },
                          Array [
                            Object {
                              "lineHeight": 24,
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      󰅖
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Saved CommentScreen should match snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#303030",
      "height": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "height": "100%",
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#1a1a1a",
            "borderRadius": 8,
            "padding": 10,
            "shadowColor": "#ebebeb",
            "shadowRadius": 8,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "fontWeight": "900",
            }
          }
        >
          Temper
        </Text>
        <View
          style={
            Object {
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <View>
                <Text
                  style={
                    Object {
                      "color": "#ffd600",
                      "fontSize": 30.821917808219176,
                      "fontWeight": "900",
                    }
                  }
                >
                   pulls
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(255, 214, 0, 0.29)",
                    "borderRadius": 4,
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "elevation": 0,
                    "flexDirection": "column",
                    "margin": 2,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": true,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "borderRadius": 4,
                        },
                        Object {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        Object {
                          "paddingRight": 4,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontFamily": "System",
                            "fontWeight": "400",
                          },
                          Object {
                            "textAlign": "left",
                          },
                          Array [
                            Object {
                              "lineHeight": 24,
                              "marginVertical": 4,
                              "minHeight": 24,
                              "textAlignVertical": "center",
                            },
                            Object {
                              "color": "rgba(255, 214, 0, 0.87)",
                              "fontFamily": "System",
                              "fontWeight": "400",
                              "marginLeft": 8,
                              "marginRight": 8,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      ib
                    </Text>
                  </View>
                </View>
              </View>
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={false}
                hitSlop={
                  Object {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "margin": 6,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 11.25,
                        "height": 22.5,
                        "width": 22.5,
                      },
                      undefined,
                      undefined,
                    ],
                  ]
                }
              >
                <View>
                  <Text
                    accessibilityElementsHidden={true}
                    allowFontScaling={false}
                    importantForAccessibility="no-hide-descendants"
                    pointerEvents="none"
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#ffd600",
                          "fontSize": 15,
                        },
                        Array [
                          Object {
                            "lineHeight": 15,
                            "transform": Array [
                              Object {
                                "scaleX": 1,
                              },
                            ],
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                        ],
                        Object {
                          "fontFamily": "Material Design Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    󰆉
                  </Text>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#ffd600",
                    "fontSize": 30.821917808219176,
                  }
                }
              >
                (
                1
                )
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#1a1a1a",
            "flex": 1,
            "marginTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1a1a1a",
              "borderBottomColor": "#ffd600",
              "borderBottomWidth": 1,
              "display": "flex",
              "flexDirection": "row",
              "padding": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <TextInput
              multiline={true}
              onChangeText={[Function]}
              placeholder="Add a comment..."
              placeholderTextColor="#ababab"
              style={
                Object {
                  "backgroundColor": "#1a1a1a",
                  "color": "#ffd600",
                }
              }
              value=""
            />
          </View>
          <View>
            <Text
              style={
                Object {
                  "color": "#ffd600",
                }
              }
            >
              0
               / 
              160
            </Text>
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#ababab",
                  "borderColor": "transparent",
                  "borderRadius": 4,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "elevation": 0,
                  "minWidth": "auto",
                }
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": true,
                  }
                }
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 4,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Array [
                          Object {
                            "letterSpacing": 1,
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          Object {
                            "marginHorizontal": 8,
                          },
                          Object {
                            "textTransform": "uppercase",
                          },
                          Object {
                            "color": "rgba(0, 0, 0, 0.32)",
                            "fontFamily": "System",
                            "fontWeight": "500",
                          },
                          Object {
                            "fontFamily": "System",
                            "fontWeight": "500",
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    send
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <RCTScrollView
          ItemSeparatorComponent={[Function]}
          data={
            Array [
              Object {
                "comment": "Test comment",
                "commentNumber": 1,
                "user": Object {
                  "_id": "user1",
                  "firstName": "First1",
                  "lastName": "Last1",
                  "username": "firstast",
                },
              },
            ]
          }
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          viewabilityConfigCallbackPairs={Array []}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#1a1a1a",
                    "display": "flex",
                    "flexDirection": "row",
                    "padding": 20,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#ababab",
                        "fontSize": 30.821917808219176,
                      }
                    }
                  >
                    First1
                     
                    Last1
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                      }
                    }
                  >
                    Test comment
                  </Text>
                </View>
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 6,
                      "left": 6,
                      "right": 6,
                      "top": 6,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "margin": 6,
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 18,
                          "height": 36,
                          "width": 36,
                        },
                        undefined,
                        undefined,
                      ],
                    ]
                  }
                >
                  <View>
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#ff0000",
                            "fontSize": 24,
                          },
                          Array [
                            Object {
                              "lineHeight": 24,
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      󰅖
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
